# postscriptum

./: .gitignore  .pylintrc  README.rst  dev-requirements.py  dev-requirements.txt  noxfile.py  pyproject.toml  setup.cfg  setup.py
examples/: change_return_code.py  confirm_exit.py  log_before_crash.py
src/goodbye/: __init__.py
src/postscriptum/: __init__.py  excepthook.py  exceptions.py  pubsub.py  register.py  signals.py  system_exit.py  types.py  utils.py  watcher.py
tests/: test_excepthook.py  test_register.py  test_signals.py  test_system_exit.py
tests/e2e/: run_event_watcher.py  run_except_handler.py  run_except_hook.py  run_signal_handler.py  test_excepthook_in_process.py  test_signal_in_process.py
tests/unit/: test_excepthook.py  test_signals.py  test_system_exit.py  test_utils.py  test_watcher.py
