[metadata]
name = postscriptum
version = attr: postscriptum.__version__
description = An intuitive and unified API to run code when Python exit
long_description = file: README.rst

[options]
zip_safe = False
include_package_data = True
package_dir=
=src
packages = find:
[options.packages.find]
where=src

[tool:pytest]
addopts = -v --color=yes --capture=no
testpaths=tests
