[metadata]
name = postscriptum
version = attr: postscriptum.__version__
description = An intuitive and unified API to run code when Python exit
long_description = file: README.rst

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    ordered-set>=3.1.1,<4
    ordered-set-stubs>=0.1.3
[options.packages.find]
where=src

[tool:pytest]
addopts = -v --color=yes --capture=no
testpaths = tests

[coverage:run]
source = postscriptum

[coverage:html]
directory = build/coverage_html_report
