[metadata]
name = postscriptum
version = attr: postscriptum.__about__.__version__
description = attr: postscriptum.__about__.__summary__
license = attr: postscriptum.__about__.__licence__
url = attr: postscriptum.__about__.__uri__
long_description = file: README.rst
keywords = atexit, excepthook, signals
author = attr: postscriptum.__about__.__author__
author_email = attr: postscriptum.__about__.__email__
classifiers =
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
install_requires =
  ordered-set>=3.1.1,<4
  ordered-set-stubs>=0.1.3
  typing_extensions>=3.7, <4
package_dir=
  =src
packages = find:


[options.packages.find]
where=src

[tool:pytest]
addopts = -v --color=yes --capture=no
testpaths = tests

[coverage:run]
source = postscriptum

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:

[coverage:html]
directory = build/coverage_html_report

[mypy]
files=src
